# life_is_long_no_python_please-lab3-variant2

./: CHANGELOG.md  README.md  life-is-long-no-python-please-lab3-variant2.cabal
app/: calculator.hs
src/: MathExpression.hs
test/: Unit.hs
