cabal-version:      3.6
name:               lab3-variant2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             MoonNarga
maintainer:         MoonNarga@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MathExpression

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base,
        hspec,
        QuickCheck,
        mtl,
        parsec,
        containers
    hs-source-dirs:   src
    default-language: Haskell2010
    GHC-Options: -Wall -Werror -Wincomplete-uni-patterns -Wredundant-constraints

executable calculator
    main-is:          calculator.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        parsec

    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test-unit
    type:       exitcode-stdio-1.0
    main-is:    Unit.hs
    
    build-depends: 
        base,
        lab3-variant2,
        hspec
        
    hs-source-dirs:   test
    default-language: Haskell2010
